--- a/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_CHARA_SYUZOKU.ERB
+++ b/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_CHARA_SYUZOKU.ERB
@@ -16,7 +16,7 @@ $MASTER_LOOP
 ;FEAT 초기화
 VARSET FEAT_SELECT
 FOR LOCAL, 100, 300
-	;所持フィートの読み込み
+	;소지 FEAT의 읽기
 	SIF TALENT:ARG:(LOCAL + LOCAL:2) > 0
 		FEAT_SELECT:LOCAL = 1
 NEXT
