--- a/ERB/게임_내_이벤트발생/강제발생이벤트/FORCE_夜這い.ERB
+++ b/ERB/게임_내_이벤트발생/강제발생이벤트/FORCE_夜這い.ERB
@@ -1154,7 +1154,7 @@ SELECTCASE ARG
 				ENDIF
 				;睡眠姦か否か
 				IF SUIMIN == 1
-					;非처녀・음호持ちなら挿入に派生
+					;비처녀・음호持ちなら挿入に派生
 					IF TALENT:처녀 < 1 && TALENT:음호 > 0
 						LCOUNT = 1
 						PRINTFORML 興奮の最高潮に達して激しさを増すばかりのピストンに愛液が絡まり
@@ -3105,7 +3105,7 @@ IF TALENT:(FLAG:799):처녀 > 0
 		CALL AFTER_PILL, TARGET, 75, CFLAG:LCOUNT:240 * -1 - 100
 	ENDIF
 
-	;非처녀
+	;비처녀
 ELSE
 	PRINTFORML %PRINT_CALLNAME(TARGET)%は%PRINT_CALLNAME(FLAG:799)%に覆いかぶさると、
 	PRINTFORML 勃起しきったペニスを膣奥まで挿入して深い抽送を開始した。
