--- a/ERB/게임_내_이벤트발생/자유행동이벤트/PASTIME_ナンパ.ERB
+++ b/ERB/게임_내_이벤트발생/자유행동이벤트/PASTIME_ナンパ.ERB
@@ -2286,7 +2286,7 @@ IF RAND:4 != 0
 				ENDIF
 				PRINTFORM %ARGS%はしきりに、ゴムでするより生の方が絶対気持ちいいよ、と甘言で惑わしている。
 			ENDIF
-			;非처녀
+			;비처녀
 		ELSE
 			PRINTFORM で、%조사처리(PRINT_TRANSCALLNAME(TARGET),"는")%%ARGS%の前で膝をついて
 			SIF TALENT:음란 > 0
@@ -2571,7 +2571,7 @@ IF RAND:4 != 0
 		PRINTW
 		;애널中出し
 		IF NAMAHAME == 3
-			;非처녀なら裏切り질내사정あり
+			;비처녀なら裏切り질내사정あり
 			IF RAND:2 == 0 && TALENT:처녀 < 0
 				PRINTL 無許可中出し
 				PRINTL 
