--- a/ERB/게임_내_전투처리/COMMON_BATTLE_FUNC.ERB
+++ b/ERB/게임_내_전투처리/COMMON_BATTLE_FUNC.ERB
@@ -409,7 +409,7 @@ IF FLAG:999 == 0
 		SIF CONFIG_CHECK_EVENT_F(3) > 0 && (FLAG:70 + FLAG:71) > 0
 			RETURNF 0
 		;襲撃イベント中ならだめ
-		SIF GETBATTLESITUATION("撤退不可") > 0
+		SIF GETBATTLESITUATION("철수 불가") > 0
 			RETURNF 0
 	ENDIF
 ENDIF
