--- a/ERB/게임_내_전투처리/COMMON_BATTLE_HANTEI.ERB
+++ b/ERB/게임_내_전투처리/COMMON_BATTLE_HANTEI.ERB
@@ -344,7 +344,7 @@ SIF CFLAG:TARGET:43 == 501 && ARGS != "HURIHODOKU"
 	LOCAL:5 += 10
 ;BRAVE HIT(同一距離で연속공격)による直撃ボーナス
 SIF TFLAG:30 > 1 && ARGS != "HURIHODOKU"
-	LOCAL:5 += GET_BRAVE_HIT(TFLAG:30 - 1,"命中")
+	LOCAL:5 += GET_BRAVE_HIT(TFLAG:30 - 1,"명중")
 ;COUNTER_ATTACKによる直撃ボーナス
 SIF TFLAG:32 > 0 && ARGS != "HURIHODOKU"
 	LOCAL:5 += GET_COUNTER_ATTACK(1)
@@ -701,7 +701,7 @@ SIF FSTYLE_NAME_F(TARGET,TCVARn:0) == "중격"
 	TIMES LOCAL:5, 0.70
 ;BRAVE HITによる回避ペナルティ
 SIF TFLAG:30 > 1
-	LOCAL:5 -= GET_BRAVE_HIT(TFLAG:30 - 1,"回避")
+	LOCAL:5 -= GET_BRAVE_HIT(TFLAG:30 - 1,"회피")
 
 ;距離による補正
 ;근거리なら回避が0.85倍
