--- a/ERB/게임_내_전투처리/전투커맨드(캐릭터)/COM_ATTACK_COMMON.ERB
+++ b/ERB/게임_내_전투처리/전투커맨드(캐릭터)/COM_ATTACK_COMMON.ERB
@@ -124,7 +124,7 @@ IF RESULT == 0
 			CALL MESSAGE_OTHER_BATTLE_CHARA_ATTACK_FALSE, ATTACK_NUM
 	ENDIF
 
-	;心境変化：高揚か消沈
+	;심경 변화：高揚か消沈
 	SIF TCVARn:1 == 0 && ATTACK_NUM == 0
 		CALL SHINKYOU_CHANGE, "KOUYOU_SYOUTIN"
 
