--- a/ERB/게임_내_전투처리/촉수데이터/잡몹적/TENTACLE_MOB_301_水棲（クリスターフィッシュ).ERB
+++ b/ERB/게임_내_전투처리/촉수데이터/잡몹적/TENTACLE_MOB_301_水棲（クリスターフィッシュ).ERB
@@ -264,7 +264,7 @@ PRINTW
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM0")
 PRINTL 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｃ)
 		SETBIT TFLAG:21,1
@@ -341,7 +341,7 @@ PRINTW
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM1")
 PRINTL 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｃ)
 		SETBIT TFLAG:21,1
@@ -376,7 +376,7 @@ PRINTW
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM10")
 PRINTL 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｃ)
 		SETBIT TFLAG:21,1
