--- a/ERB/게임_내_전투처리/촉수데이터/잡몹적/TENTACLE_MOB_601_獣（発情ウサギ).ERB
+++ b/ERB/게임_내_전투처리/촉수데이터/잡몹적/TENTACLE_MOB_601_獣（発情ウサギ).ERB
@@ -225,7 +225,7 @@ PRINTW
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM1")
 PRINTL 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｃ) || (ARG & Ｖ)
 		SETBIT TFLAG:21,1
@@ -277,7 +277,7 @@ PRINTW
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM3")
 PRINTL 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｖ)
 		SETBIT TFLAG:21,1
@@ -299,7 +299,7 @@ TRYCALLFORM KOJO_{CFLAG:6}_COM8
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;嬲りものにされるところを見られた
 	SETBIT TFLAG:21,7
 ENDIF
