--- a/ERB/게임_내_전투처리/촉수데이터/잡몹적/TENTACLE_MOB_801_物質（カージャッカー）.ERB
+++ b/ERB/게임_내_전투처리/촉수데이터/잡몹적/TENTACLE_MOB_801_物質（カージャッカー）.ERB
@@ -266,7 +266,7 @@ TRYCALLFORM KOJO_{CFLAG:6}_COM0
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
@@ -333,7 +333,7 @@ TRYCALLFORM KOJO_{CFLAG:6}_COM1
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
@@ -481,7 +481,7 @@ TRYCALLFORM KOJO_{CFLAG:6}_COM2
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
@@ -560,7 +560,7 @@ TRYCALLFORM KOJO_{CFLAG:6}_COM3
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;挿入されたところを見られた
 	SIF (ARG & Ｖ) || (ARG & Ａ)
 		SETBIT TFLAG:21,3
@@ -585,7 +585,7 @@ TRYCALLFORM KOJO_{CFLAG:6}_COM4
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
@@ -636,7 +636,7 @@ TRYCALLFORM KOJO_{CFLAG:6}_COM5
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;挿入されたところを見られた
 	SIF (ARG & Ｖ) || (ARG & Ａ)
 		SETBIT TFLAG:21,3
@@ -661,7 +661,7 @@ TRYCALLFORM KOJO_{CFLAG:6}_COM6
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
@@ -686,7 +686,7 @@ TRYCALLFORM KOJO_{CFLAG:6}_COM7
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
@@ -711,7 +711,7 @@ TRYCALLFORM KOJO_{CFLAG:6}_COM8
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;嬲りものにされるところを見られた
 	SETBIT TFLAG:21,7
 ENDIF
@@ -743,7 +743,7 @@ TRYCALLFORM KOJO_{CFLAG:6}_COM9
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;嬲りものにされるところを見られた
 	SETBIT TFLAG:21,7
 ENDIF
@@ -767,7 +767,7 @@ TRYCALLFORM KOJO_{CFLAG:6}_COM10
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
@@ -810,7 +810,7 @@ TRYCALLFORM KOJO_{CFLAG:6}_COM11
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
@@ -837,7 +837,7 @@ TRYCALLFORM KOJO_{CFLAG:6}_COM12
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;口を犯されたところを見られた
 	SETBIT TFLAG:21,2
 	;嬲りものにされるところを見られた
@@ -863,7 +863,7 @@ TRYCALLFORM KOJO_{CFLAG:6}_COM13
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;嬲りものにされるところを見られた
 	SETBIT TFLAG:21,7
 ENDIF
