--- a/ERB/게임_내_전투처리/촉수데이터/잡몹적/TENTACLE_MOB_803_物質（メカ触手）.ERB
+++ b/ERB/게임_내_전투처리/촉수데이터/잡몹적/TENTACLE_MOB_803_物質（メカ触手）.ERB
@@ -495,7 +495,7 @@ IF FLAG:15 >= FLAG:14 && TFLAG:4 > 0
 	ENDIF
 ENDIF
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;口を犯されたところを見られた
 	SIF (ARG & Ｖ) == 0
 		SETBIT TFLAG:21,2
@@ -627,7 +627,7 @@ IF FLAG:15 >= FLAG:14 && (ARG & Ａ) && TFLAG:4 > 0
 	ENDIF
 ENDIF
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;挿入されたところを見られた
 	SIF (ARG & Ａ)
 		SETBIT TFLAG:21,3
@@ -671,7 +671,7 @@ PRINTW
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM8")
 PRINTL 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;嬲りものにされるところを見られた
 	SETBIT TFLAG:21,7
 ENDIF
@@ -717,7 +717,7 @@ PRINTW
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM9")
 PRINTL 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;嬲りものにされるところを見られた
 	SETBIT TFLAG:21,7
 ENDIF
@@ -795,7 +795,7 @@ IF FLAG:15 >= FLAG:14 && TFLAG:4 > 0
 	PRINTW 
 ENDIF
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;口を犯されたところを見られた
 	SETBIT TFLAG:21,2
 	;嬲りものにされるところを見られた
@@ -868,7 +868,7 @@ PRINTW
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM15")
 PRINTL
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;挿入されたところを見られた
 	SETBIT TFLAG:21,3
 ENDIF
@@ -929,7 +929,7 @@ PRINTW
 ;구상
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM16")
 PRINTL
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;挿入されたところを見られた
 	SETBIT TFLAG:21,3
 ENDIF
@@ -991,7 +991,7 @@ PRINTW
 ;구상
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM17")
 PRINTL
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;挿入されたところを見られた
 	SETBIT TFLAG:21,3
 ENDIF
@@ -1052,7 +1052,7 @@ PRINTW
 ;구상
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM18")
 PRINTL
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;挿入されたところを見られた
 	SETBIT TFLAG:21,3
 ENDIF
@@ -1122,7 +1122,7 @@ PRINTW
 ;구상
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM19")
 PRINTL
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;挿入されたところを見られた
 	SETBIT TFLAG:21,3
 ENDIF
@@ -1184,7 +1184,7 @@ PRINTW
 ;구상
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM20")
 PRINTL
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;挿入されたところを見られた
 	SETBIT TFLAG:21,3
 ENDIF
@@ -1354,7 +1354,7 @@ SIF BASE:A결계내구력 < 0
 SIF BASE:B결계내구력 < 0 
 	BASE:B결계내구력 = 0
 
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SETBIT TFLAG:21,1
 	;嬲りものにされるところを見られた
