--- a/ERB/게임_내_전투처리/촉수데이터/잡몹적/TENTACLE_MOB_901_天界（セラプー）.ERB
+++ b/ERB/게임_내_전투처리/촉수데이터/잡몹적/TENTACLE_MOB_901_天界（セラプー）.ERB
@@ -373,7 +373,7 @@ ENDIF
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM0")
 PRINTL 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
 ENDIF
@@ -649,7 +649,7 @@ TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM2")
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
 ENDIF
@@ -821,7 +821,7 @@ ENDIF
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM4")
 PRINTL 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
 ENDIF
@@ -934,7 +934,7 @@ PRINTW
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM6")
 PRINTL 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
 ENDIF
@@ -1027,7 +1027,7 @@ ELSE
 ENDIF
 
 ;撮影フラグは、愛撫(1)、口淫(2)、挿入(3)、嬲りものにされる(7)の４つ
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
 ENDIF
@@ -1119,7 +1119,7 @@ ENDIF
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM8")
 PRINTL 
 ;撮影フラグは、愛撫(1)、口淫(2)、挿入(3)、嬲りものにされる(7)の４つ
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	SETBIT TFLAG:21,7
 ENDIF
 
@@ -1151,7 +1151,7 @@ PRINTL
 TRYCALLFORM KOJO_{CFLAG:6}_SEX_COM14
 PRINTL 
 ;撮影フラグは、愛撫(1)、口淫(2)、挿入(3)、嬲りものにされる(7)の４つ
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	SETBIT TFLAG:21,7
 ENDIF
 
@@ -1276,7 +1276,7 @@ PRINTW
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM11")
 PRINTL 
 ;撮影フラグは、愛撫(1)、口淫(2)、挿入(3)、嬲りものにされる(7)の４つ
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	SETBIT TFLAG:21,2
 ENDIF
 
@@ -1413,7 +1413,7 @@ PRINTW
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM11")
 PRINTL 
 ;撮影フラグは、愛撫(1)、口淫(2)、挿入(3)、嬲りものにされる(7)の４つ
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	SETBIT TFLAG:21,2
 ENDIF
 
@@ -1505,7 +1505,7 @@ SIF (TCVARn:12 & 강구속)
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM0")
 PRINTL 
 ;撮影フラグは、愛撫(1)、口淫(2)、挿入(3)、嬲りものにされる(7)の４つ
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
 ENDIF
@@ -1627,7 +1627,7 @@ PRINTFORMW
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM1")
 PRINTL 
 ;撮影フラグは、愛撫(1)、口淫(2)、挿入(3)、嬲りものにされる(7)の４つ
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
 ENDIF
@@ -1792,7 +1792,7 @@ ENDIF
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM1")
 PRINTL 
 ;撮影フラグは、愛撫(1)、口淫(2)、挿入(3)、嬲りものにされる(7)の４つ
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
 ENDIF
