--- a/ERB/구상/KOJO_2_ロボっ子.ERB
+++ b/ERB/구상/KOJO_2_ロボっ子.ERB
@@ -996,7 +996,7 @@ TRYCALLFORM KOJO_2_SEX_MARK_TIJYOKU_3_{RESULT}
 
 
 
-;心境変化関連
+;심경 변화関連
 
 ;倒錯
 ;--------------------------------------------------
