--- a/ERB/구상/KOJO_4_汎用豹変.ERB
+++ b/ERB/구상/KOJO_4_汎用豹変.ERB
@@ -435,7 +435,7 @@ CALL KOJO_4_ROOT_ENCOUNT("AKUOTI")
 @KOJO_4_BATTLE_CHARA_TRANSRELEASE
 CALL KOJO_4_ROOT_BATTLE("BATTLE_CHARA_TRANSRELEASE")
 
-;絶頂で変身が強制的に解けた
+;절정으로 변신이 강제로 풀렸다
 ;-------------------------------------------------
 @KOJO_4_BATTLE_CHARA_TRANSRELEASE_ECS
 CALL KOJO_4_ROOT_BATTLE("BATTLE_CHARA_TRANSRELEASE_ECS")
@@ -770,7 +770,7 @@ CALL KOJO_4_ROOT_BATTLE("BATTLE_END_LOSS")
 CALL KOJO_4_ROOT_BATTLE("BATTLE_END_TIMEUP")
 
 ;**************************************************
-;心境変化関連
+;심경 변화関連
 ;**************************************************
 ;倒錯
 ;-------------------------------------------------
