--- a/ERB/구상/固有キャラ専用口上/KOJO_364_天津みこと.ERB
+++ b/ERB/구상/固有キャラ専用口上/KOJO_364_天津みこと.ERB
@@ -2465,7 +2465,7 @@ ENDIF
 
 
 ;--------------------------------------------------------------------------------------------------------------------------------------------------------
-;心境変化関連
+;심경 변화関連
 ;--------------------------------------------------------------------------------------------------------------------------------------------------------
 
 ;倒錯
