--- a/ERB/구상/女性汎用口上/KOJO_0_13_元気っ子.ERB
+++ b/ERB/구상/女性汎用口上/KOJO_0_13_元気っ子.ERB
@@ -539,7 +539,7 @@ SELECTCASE RAND:3
 		PRINTFORML 「！！いやぁぁぁぁぁ！？」
 ENDSELECT
 
-;絶頂で変身が強制的に解けた
+;절정으로 변신이 강제로 풀렸다
 ;--------------------------------------------------
 @KOJO_0_BATTLE_CHARA_TRANSRELEASE_ECS_13
 SELECTCASE RAND:3
@@ -1824,7 +1824,7 @@ PRINTFORML 「見られちゃったんだ……。　か、身体の奥まで、
 PRINTFORML 「うっ……う、うぅっ…うぅ……」
 
 
-;心境変化関連
+;심경 변화関連
 
 ;倒錯
 ;--------------------------------------------------
