--- a/ERB/구상/女性汎用口上/KOJO_0_17_楽天家_OTHER.ERB
+++ b/ERB/구상/女性汎用口上/KOJO_0_17_楽天家_OTHER.ERB
@@ -30,18 +30,18 @@ SETCOLOR 180,120,20
 PRINTL 「…久しぶり」
 PRINTL 「まだ"そっち"にいるの？　こっちはこんなに素敵な世界なのに…」
 
-;세뇌/흑화 캐릭터가 操作キャラを変身強制解除させた		
+;세뇌/흑화 캐릭터가 조작 캐릭터를 강제 변신 해제시켰다		
 ;----------------------------------------------------------
 @KOJO_0_OTHER_BATTLE_CHARA_TRANSRELEASE_17
 PRINTL 「フフッ」
 
-;세뇌/흑화 캐릭터가 操作キャラに撤退されてしまった		
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막지 못했다		
 ;----------------------------------------------------------
 @KOJO_0_OTHER_BATTLE_CHARA_TETTAI_SUCCESS_17
 PRINTL 「…逃げたか」
 PRINTL 「まあいいさ、時間はいっぱいあるからね」
 
-;세뇌/흑화 캐릭터가 조작 캐릭터의 撤退を防いだ		
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막았다		
 ;----------------------------------------------------------
 @KOJO_0_OTHER_BATTLE_CHARA_TETTAI_FALSE_17
 PRINTL 「バレバレだよ」
