--- a/ERB/구상/女性汎用口上/KOJO_0_24_古風.ERB
+++ b/ERB/구상/女性汎用口上/KOJO_0_24_古風.ERB
@@ -2712,7 +2712,7 @@ PRINTFORML 「……め、牝豚……の……無様な姿……もっと、見
 PRINTFORML  恥辱に耐え切れず、%CALLNAME%の心は折れてしまった……
 
 
-;心境変化関連
+;심경 변화関連
 
 ;倒錯
 ;--------------------------------------------------
