--- a/ERB/구상/女性汎用口上/KOJO_0_27_乱暴者.ERB
+++ b/ERB/구상/女性汎用口上/KOJO_0_27_乱暴者.ERB
@@ -462,7 +462,7 @@ ELSE
 	PRINTFORML 「この、\@ TALENT:악세서리==3 ? バカにしないで # なめんじゃねえぞ \@！」
 ENDIF
 
-;絶頂で変身が強制的に解けた
+;절정으로 변신이 강제로 풀렸다
 ;-------------------------------------------------
 @KOJO_0_BATTLE_CHARA_TRANSRELEASE_ECS_27
 PRINTFORML 「はうっ……！ こ、この\@ TALENT:악세서리==3 ?  # クソが \@っ……！」
@@ -1086,7 +1086,7 @@ ELSE
 	PRINTFORML 「あっ！ \@ TALENT:악세서리==3 ? 待ちなさい # 逃げるな \@っ！」
 ENDIF
 
-;心境変化関連
+;심경 변화関連
 ;倒錯
 ;-------------------------------------------------
 @KOJO_0_BATTLE_SHINKYOU_CHANGE_TOUSAKU_27
