--- a/ERB/구상/女性汎用口上/KOJO_0_27_乱暴者_OTHER.ERB
+++ b/ERB/구상/女性汎用口上/KOJO_0_27_乱暴者_OTHER.ERB
@@ -102,12 +102,12 @@ PRINTFORML \@ TALENT:(FLAG:111):악세서리==3 ? あげるわ # やろうか \@
 @KOJO_0_OTHER_BATTLE_TENTACLE_HADOU_FALSE_27
 
 ;조작 캐릭터의 行動
-;세뇌/흑화 캐릭터가 操作キャラに撤退されてしまった
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막지 못했다
 ;-------------------------------------------------
 @KOJO_0_OTHER_BATTLE_CHARA_TETTAI_SUCCESS_27
 PRINTFORML 「ちっ、逃げられた\@ TALENT:(FLAG:111):악세서리==3 ? わね # か \@……」
 
-;세뇌/흑화 캐릭터가 조작 캐릭터의 撤退を防いだ
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막았다
 ;-------------------------------------------------
 @KOJO_0_OTHER_BATTLE_CHARA_TETTAI_FALSE_27
 PRINTFORML 「逃げたら駄目\@ TALENT:(FLAG:111):악세서리==3 ? よ # だぜ \@」
@@ -252,7 +252,7 @@ CALL KOJO_0_OTHER_BATTLE_CHARA_BATOU_27
 
 
 ;行動結果
-;세뇌/흑화 캐릭터가 操作キャラを変身強制解除させた（通常）
+;세뇌/흑화 캐릭터가 조작 캐릭터를 강제 변신 해제시켰다（通常）
 ;-------------------------------------------------
 @KOJO_0_OTHER_BATTLE_CHARA_TRANSRELEASE_27
 IF CFLAG:(FLAG:111):0 == 상태_흑화
@@ -261,7 +261,7 @@ ELSE
 	PRINTFORML 「さあ、촉수様に体を捧げ\@ TALENT:(FLAG:111):악세서리==3 ? なさい # ろ \@」
 ENDIF
 
-;세뇌/흑화 캐릭터가 操作キャラを変身強制解除させた（絶頂）
+;세뇌/흑화 캐릭터가 조작 캐릭터를 강제 변신 해제시켰다（絶頂）
 ;-------------------------------------------------
 @KOJO_0_OTHER_BATTLE_CHARA_TRANSRELEASE_ECS_27
 IF CFLAG:(FLAG:111):0 == 상태_흑화
