--- a/ERB/구상/女性汎用口上/★KOJO_0_16_真面目/活動_アイドル.ERB
+++ b/ERB/구상/女性汎用口上/★KOJO_0_16_真面目/活動_アイドル.ERB
@@ -99,7 +99,7 @@
 	;プロデューサーが頭を掴み、ヒロインは口で精液を受け止める
 	;→구상
 
-;베개 영업（プロデューサー：立ちバック）　非처녀限定
+;베개 영업（プロデューサー：立ちバック）　비처녀限定
 ;--------------------------------------------------
 @KOJO_0_SEISAN_MAKURA_pro2_16
 	;アイドルコスチューム姿のまま下着をずらして立ちバックの姿勢で挿入
