--- a/ERB/구상/男性汎用口上/KOJO_1_20_ツンデレ.ERB
+++ b/ERB/구상/男性汎用口上/KOJO_1_20_ツンデレ.ERB
@@ -4377,7 +4377,7 @@ SETCOLOR 243,213,26
 RESETCOLOR
 
 
-;心境変化関連
+;심경 변화関連
 
 ;倒錯
 ;--------------------------------------------------
@@ -4575,7 +4575,7 @@ IF TALENT:처녀 > 0
 		ENDSELECT
 		PRINTFORMDW 身体の疼きに負け、%타겟은% 自慰にふけっていった。
 	ENDIF
-;非처녀
+;비처녀
 ELSE
 	IF ABL:자위중독 >= 4
 		PRINTFORML 「んあっ！　きもち、いい……」
