--- a/ERB/구상/男性汎用口上/★KOJO_1_16_真面目/イベント_幽閉.ERB
+++ b/ERB/구상/男性汎用口上/★KOJO_1_16_真面目/イベント_幽閉.ERB
@@ -266,7 +266,7 @@ ENDIF
 @KOJO_1_PRISON_COM_0_16
 ;結界ガードあり
 ;Ｂ絞り
-;非처녀ならＶ快楽
+;비처녀ならＶ快楽
 ;Ａ浣腸
 ;ＰコキorＣ巻き上げ吸い
 SELECTCASE RAND:2
@@ -342,7 +342,7 @@ PRINTFORML  絶叫が意味を成さないただの啼き声になった頃、%P
 ;--------------------------------------------------
 @KOJO_1_PRISON_COM_2_16
 ;結界時は間接的な接触の感触のみ
-;非처녀で可能ならＶ複合
+;비처녀で可能ならＶ複合
 ;尻肉を震わせながら悶える→
 ;촉수의포로取得後
 IF TALENT:촉수의포로
@@ -366,7 +366,7 @@ PRINTFORML  黄濁し異臭を放つ大量の精液で彩った。
 ;--------------------------------------------------
 @KOJO_1_PRISON_COM_3_16
 ;全身拘束　B결계방어orＢ巻き擦りで甘い吐息
-;続けてＭ、非처녀やＶＡ可能なら下半身も
+;続けてＭ、비처녀やＶＡ可能なら下半身も
 ;촉수의포로取得後
 IF TALENT:촉수의포로 
 	PRINTDATAL
