--- a/ERB/구상/男性汎用口上/★KOJO_1_16_真面目/コモン_自慰.ERB
+++ b/ERB/구상/男性汎用口上/★KOJO_1_16_真面目/コモン_自慰.ERB
@@ -460,7 +460,7 @@ ELSE
 				ENDSELECT
 				PRINTFORMW 身体の疼きに負け、%타겟은% 自慰にふけっていった。
 			ENDIF
-		;非처녀
+		;비처녀
 		ELSE
 			IF ABL:자위중독 >= 4
 				PRINTFORML 「んあっ！　きもち、いい……」
