--- a/ERB/구상/男性汎用口上/★KOJO_1_16_真面目/戦闘サブイベント_状態_心境_刻印変化.ERB
+++ b/ERB/구상/男性汎用口上/★KOJO_1_16_真面目/戦闘サブイベント_状態_心境_刻印変化.ERB
@@ -162,7 +162,7 @@ ENDIF
 
 
 
-;絶頂で変身が強制的に解けた
+;절정으로 변신이 강제로 풀렸다
 @KOJO_1_BATTLE_CHARA_TRANSRELEASE_ECS_16
 
 IF TALENT:촉수의포로
@@ -193,7 +193,7 @@ ENDIF
 ;★集中を保てないとか
 ;　とか
 
-;●心境変化関連
+;●심경 변화関連
 ;倒錯
 ;犯された場合　타락以外で처녀 상실した場合など
 ;--------------------------------------------------
