--- a/ERB/구상/男性汎用口上/★KOJO_1_16_真面目/活動_アルバイト.ERB
+++ b/ERB/구상/男性汎用口上/★KOJO_1_16_真面目/活動_アルバイト.ERB
@@ -265,7 +265,7 @@ ENDIF
 ;アルバイト『新聞配達』(アクメ自転車)
 ;--------------------------------------------------
 @KOJO_1_SEISAN_SHINBUN_acmecycle_16
-	;非처녀限定イベント　サドルから伸びた촉수に腰骨を抱え込まれ
+	;비처녀限定イベント　サドルから伸びた촉수に腰骨を抱え込まれ
 	;股間に密着したサドル촉수　陰核を突き上げるように振動
 	;前後の穴に潜り込み　ペダルの回転に連動するかのようにピストン運動
 	;足を止めると激しく振動、Ｇスポットを責め立てる
