--- a/ERB/범용함수/COMMON_함수.ERB
+++ b/ERB/범용함수/COMMON_함수.ERB
@@ -167,9 +167,9 @@ SIF ARGS == "적 체력"
 	CALL COLORSENTENCE_BARCOLOR, ARG:1, ARG:2
 IF FLAG:73 > 0 && ARGS == "적 체력"
 	RESETCOLOR
-	PRINTFORM 人数
+	PRINTFORM 인원수
 ELSEIF ENEMY_TYPE_CHECK_F("AKUOTI") == 0 && ARGS == "적 체력"
-	PRINTFORM %STR:2500%체력
+	PRINTFORM %STR:2500% 체력
 ELSEIF ENEMY_TYPE_CHECK_F("AKUOTI") == 1 && ARGS == "적 체력"
 	PRINTFORM 적 체력
 ENDIF
