--- a/ERB/지문/MESSAGE_BATTLE.ERB
+++ b/ERB/지문/MESSAGE_BATTLE.ERB
@@ -358,7 +358,7 @@ CALL UNLOCK_ACHIEVEMENT(276,"절체절명 히로인")
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "BATTLE_CHARA_TRANSRELEASE")
 PRINTW 
 
-;絶頂で変身が強制的に解けた
+;절정으로 변신이 강제로 풀렸다
 @MESSAGE_BATTLE_CHARA_TRANSRELEASE_ECS
 FONTBOLD
 SETCOLORBYNAME HOTPINK
@@ -1772,9 +1772,9 @@ PRINTW
 
 
 
-;心境変化関連
+;심경 변화関連
 ;**********************************************************
-;心境変化：倒錯
+;심경 변화：倒錯
 @MESSAGE_SHINKYOU_CHANGE_TOUSAKU
 PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 
 CALL SHINKYOU_CHECK, "PRINT", 0
@@ -1783,7 +1783,7 @@ PRINTL 状態 になった
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "BATTLE_SHINKYOU_CHANGE_TOUSAKU")
 PRINTW 
 
-;心境変化：怒り
+;심경 변화：怒り
 @MESSAGE_SHINKYOU_CHANGE_IKARI
 PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 
 CALL SHINKYOU_CHECK, "PRINT", 0
@@ -1792,7 +1792,7 @@ PRINTL 状態 になった
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "BATTLE_SHINKYOU_CHANGE_IKARI")
 PRINTW 
 
-;心境変化：諦観
+;심경 변화：諦観
 @MESSAGE_SHINKYOU_CHANGE_TEIKAN
 PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 
 CALL SHINKYOU_CHECK, "PRINT", 0
@@ -1801,7 +1801,7 @@ PRINTL 状態 になった
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "BATTLE_SHINKYOU_CHANGE_TEIKAN")
 PRINTW 
 
-;心境変化：冷静
+;심경 변화：冷静
 @MESSAGE_SHINKYOU_CHANGE_REISEI
 PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 
 CALL SHINKYOU_CHECK, "PRINT", 0
@@ -1809,7 +1809,7 @@ PRINTL 状態 になった
 ;구상
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "BATTLE_SHINKYOU_CHANGE_REISEI")
 
-;心境変化：動揺
+;심경 변화：動揺
 @MESSAGE_SHINKYOU_CHANGE_DOUYOU
 PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 
 CALL SHINKYOU_CHECK, "PRINT", 0
@@ -1818,7 +1818,7 @@ PRINTL 状態 になった
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "BATTLE_SHINKYOU_CHANGE_DOUYOU")
 PRINTW 
 
-;心境変化：高揚
+;심경 변화：高揚
 @MESSAGE_SHINKYOU_CHANGE_KOUYOU
 PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 
 CALL SHINKYOU_CHECK, "PRINT", 0
@@ -1827,7 +1827,7 @@ PRINTL 状態 になった
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "BATTLE_SHINKYOU_CHANGE_KOUYOU")
 PRINTW 
 
-;心境変化：消沈
+;심경 변화：消沈
 @MESSAGE_SHINKYOU_CHANGE_SYOUTIN
 PRINTFORM %조사처리(PRINT_TRANSCALLNAME(TARGET),"는")% 
 CALL SHINKYOU_CHECK, "PRINT", 0
