--- a/ERB/지문/MESSAGE_OTHER.ERB
+++ b/ERB/지문/MESSAGE_OTHER.ERB
@@ -16,7 +16,7 @@ TRYCALLFORM KOJO_ROOT(CFLAG:(FLAG:111):6, "OTHER_ENTRY")
 RESETCOLOR
 
 
-;세뇌/흑화 캐릭터가 操作キャラを変身強制解除させた		
+;세뇌/흑화 캐릭터가 조작 캐릭터를 강제 변신 해제시켰다		
 ;----------------------------------------------------------
 @MESSAGE_OTHER_BATTLE_CHARA_TRANSRELEASE
 ;구상
@@ -31,7 +31,7 @@ TRYCALLFORM KOJO_ROOT(CFLAG:(FLAG:111):6, "OTHER_BATTLE_CHARA_TRANSRELEASE_ECS")
 RESETCOLOR
 
 
-;세뇌/흑화 캐릭터가 操作キャラに撤退されてしまった		
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막지 못했다		
 ;----------------------------------------------------------
 @MESSAGE_OTHER_BATTLE_CHARA_TETTAI_SUCCESS
 ;구상
@@ -41,7 +41,7 @@ RESETCOLOR
 
 
 
-;세뇌/흑화 캐릭터가 조작 캐릭터의 撤退を防いだ
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막았다
 ;----------------------------------------------------------
 @MESSAGE_OTHER_BATTLE_CHARA_TETTAI_FALSE
 ;구상
