--- a/ERB/지문/MESSAGE_WINDOWLIBRARY_VIDEOHOSTSITE.ERB
+++ b/ERB/지문/MESSAGE_WINDOWLIBRARY_VIDEOHOSTSITE.ERB
@@ -151,7 +151,7 @@ ELSE
 		ELSEIF ABL:A감각 < 2
 			strVSWText:0:1:6=お尻は……あんまり慣れてません。
 		ELSE
-			strVSWText:0:1:6=非처녀の中古ビッチです。
+			strVSWText:0:1:6=비처녀の中古ビッチです。
 		ENDIF
 		IF ABL:A감각 > 4
 			strVSWText:0:1:7=男性様にケツマンコずぽずぽされるの大好きです
@@ -159,7 +159,7 @@ ELSE
 			strVSWText:0:1:7=
 		ENDIF
 	ELSE
-		strVSWText:0:1:6=非처녀の中古ビッチです。
+		strVSWText:0:1:6=비처녀の中古ビッチです。
 		IF CFLAG:206 == 1
 			strVSWText:0:1:7=寝ているときに새끼 촉수に初めてを奪われました。
 		ELSEIF CFLAG:206 == 2 || CFLAG:206 == 4
