--- a/ERB/캐릭터관련/CHARA_STATUS.ERB
+++ b/ERB/캐릭터관련/CHARA_STATUS.ERB
@@ -1300,13 +1300,13 @@ ELSEIF ARG:1 == 1
 	NEXT
 	PRINTFORM [근거리%LOCALS:1%] [중거리%LOCALS:2%] [원거리%LOCALS:3%]
 	PRINTL 
-	CALLFORM COLORSENTENCE_BAR(BASENAME:0, 6, BASE:(ARG:0):체력, MAXBASE:(ARG:0):체력, 20)
+	CALLFORM COLORSENTENCE_BAR(BASENAME:0, 7, BASE:(ARG:0):체력, MAXBASE:(ARG:0):체력, 20)
 	PRINTPLAIN  　스타일：
 	FOR LOCAL,1,4
 		PRINTFORM << %FSTYLE_NAME_F(TARGET,LOCAL)% >> 
 	NEXT
 	PRINTL 
-	CALLFORM COLORSENTENCE_BAR(BASENAME:1, 6, BASE:(ARG:0):기력, MAXBASE:(ARG:0):기력, 20)
+	CALLFORM COLORSENTENCE_BAR(BASENAME:1, 7, BASE:(ARG:0):기력, MAXBASE:(ARG:0):기력, 20)
 	
 	;전투 지원에 따른 보정률
 	CALL CALC_CHISEI_SHIEN(0)
@@ -1445,13 +1445,13 @@ ELSEIF ARG:1 == 1
 
 ;스테이터스 화면
 ELSEIF ARG:1 == 2
-	PRINTFORM 이름　：%NAME:(ARG:0), 28, LEFT%
+	PRINTFORM 이름　：%NAME:(ARG:0), (28-STRLENSU(NAME:(ARG:0))), LEFT%
 	PRINTPLAIN 　
 	PRINT [10] 주관 모드 변경：
 	PRINTFORM \@TALENT:ARG:주관시점 > 0 ? 사용한다 # 사용하지 않는다 \@
 	PRINTL
 
-	PRINTFORM 통칭　：%CALLNAME:(ARG:0), 28, LEFT%
+	PRINTFORM 통칭　：%CALLNAME:(ARG:0), (28-STRLENSU(CALLNAME:(ARG:0))), LEFT%
 	PRINTPLAIN 　
 	SIF FLAG:700 > 0
 		SETCOLOR 105,105,105
@@ -1460,7 +1460,7 @@ ELSEIF ARG:1 == 2
 	PRINTL 
 
 	LOCALS = %SELF_CALL(0, 0, ARG:0)%
-	PRINTFORM 일인칭：%LOCALS, 28, LEFT%
+	PRINTFORM 일인칭：%LOCALS, (29-STRLENSU(SELF_CALL(0, 0, ARG:0))), LEFT%
 	PRINTPLAIN 　
 	SIF FLAG:700 > 0
 		SETCOLOR 105,105,105
@@ -1502,7 +1502,7 @@ ELSEIF ARG:1 == 2
 	IF TALENT:(ARG:0):변신능력 == 1
 		CALL SHORTLINE
 		PRINTFORM 【변신 능력 있음】
-		PRINTPLAIN 　　　　　　　　　　　
+		PRINTPLAIN 　　　　　　　　　　
 		IF TALENT:(ARG:0):변신능력 == 1
 			SIF FLAG:700 > 0
 				SETCOLOR 105,105,105
@@ -1535,7 +1535,7 @@ ELSEIF ARG:1 == 2
 	PRINTL 
 	CALLFORM COLORSENTENCE_BAR(BASENAME:1, 6, BASE:(ARG:0):기력, MAXBASE:(ARG:0):기력, 20)
 	PRINTL 
-	CALLFORM COLORSENTENCE_BAR(BASENAME:2, 6, BASE:(ARG:0):성내성, MAXBASE:(ARG:0):성내성, 20)
+	CALLFORM COLORSENTENCE_BAR(BASENAME:2, 5, BASE:(ARG:0):성내성, MAXBASE:(ARG:0):성내성, 20)
 	PRINTL
 
 	
@@ -3277,11 +3277,11 @@ REPEAT 99
 			IF ABL:ARG:COUNT > 10
 				LOCAL:3=MIN(LOCAL:3+64,255)
 				SETCOLOR LOCAL:1,LOCAL:2,LOCAL:3
-				PRINTFORM %ABLNAME:COUNT,8,LEFT%：Lv{ABL:ARG:COUNT,2,RIGHT}[
+				PRINTFORM %ABLNAME:COUNT,(8-STRLENSU(ABLNAME:COUNT)),LEFT%：Lv{ABL:ARG:COUNT,2,RIGHT}[
 				CALL COLOR_BAR(ABL:ARG:COUNT-9,10,5,LOCAL:1,LOCAL:2,LOCAL:3,-16,10,10,6,2,"❤",">>")
 			ELSE
 				SETCOLOR LOCAL:1,LOCAL:2,LOCAL:3
-				PRINTFORM %ABLNAME:COUNT,8,LEFT%：Lv{ABL:ARG:COUNT,2,RIGHT}[
+				PRINTFORM %ABLNAME:COUNT,(8-STRLENSU(ABLNAME:COUNT)),LEFT%：Lv{ABL:ARG:COUNT,2,RIGHT}[
 				CALL COLOR_BAR(ABL:ARG:COUNT,10,10,LOCAL:1,LOCAL:2,LOCAL:3,-160,10,10,6,2,">",">")
 			ENDIF
 			SETCOLOR LOCAL:1,LOCAL:2,LOCAL:3
