--- a/●개발자용 자료/各種テンプレ/TSオトコ口上テンプレ.ERB
+++ b/●개발자용 자료/各種テンプレ/TSオトコ口上テンプレ.ERB
@@ -1566,7 +1566,7 @@ ENDIF
 
 
 ;--------------------------------------------------------------------------------------------------------------------------------------------------------
-;心境変化関連
+;심경 변화関連
 ;--------------------------------------------------------------------------------------------------------------------------------------------------------
 
 ;倒錯
