--- a/●개발자용 자료/各種テンプレ/豹変型_口上テンプレ.ERB
+++ b/●개발자용 자료/各種テンプレ/豹変型_口上テンプレ.ERB
@@ -2371,7 +2371,7 @@ ENDIF
 
 
 ;--------------------------------------------------------------------------------------------------------------------------------------------------------
-;心境変化関連
+;심경 변화関連
 ;--------------------------------------------------------------------------------------------------------------------------------------------------------
 
 ;倒錯
