--- a/ERB/게임_내_전투처리/BATTLE_SHOW_STATUS.ERB
+++ b/ERB/게임_내_전투처리/BATTLE_SHOW_STATUS.ERB
@@ -1,21 +1,21 @@
 ﻿;--------------------------------------------------
-;戦闘時に呼ばれるUI表示処理
+;전투 시에 호출되는 UI 표시 처리
 @SHOW_STATUS
 #DIM CHISEI_CAL
 #DIM CCOUNT
 RESETCOLOR
 
 ;--------------------------------------------------
-;ここから表示
+;여기서부터 표시
 ;--------------------------------------------------
-;キャラの基礎스테이터스
+;캐릭터의 기초 스테이터스
 CALL SHOW_STATUS_BASE_DISPBATTLE, TARGET
 
 
 
 PRINTL 
 
-PRINT 状態　　　
+PRINT 상태　　　
 IF ISMALE()
 	SETCOLOR 0, 180, 205
 	PRINT [남자]
@@ -35,24 +35,24 @@ ELSE
 	ELSEIF TALENT:처녀 > 0
 		PRINT [처녀]
 	ELSEIF TALENT:처녀 == 0 || TALENT:처녀 == -1
-		PRINT [非처녀]
+		PRINT [비처녀]
 	ENDIF
 	SETCOLOR 255,255,255
 	SIF STAIN:0 & 4 || STAIN:1 & 4 || STAIN:2 & 4
-		PRINTFORM [精液まみれ]
+		PRINTFORM [정액범벅]
 	SETCOLOR 255, 180, 120
 	SIF TALENT:후타나리 > 0
 		PRINT [후타나리]
 ENDIF
 SETCOLOR 80, 80, 255
 SIF CFLAG:1 == 1
-	PRINT [変身]
+	PRINT [변신]
 SIF CFLAG:1 == 2
-	PRINT [SP変身]
+	PRINT [SP변신]
 
 SETCOLOR 255, 128, 255
 SIF TCVARn:40 > 0
-	PRINT [絶頂禁止]
+	PRINT [절정금지]
 
 IF CFLAG:99 < 20
 	SETCOLOR 50, 255, 90
@@ -62,36 +62,36 @@ ELSE
 	SETCOLOR 30, 102, 36
 ENDIF
 SIF CFLAG:99
-	PRINTFORM [疲労 {CFLAG:99}]
+	PRINTFORM [피로 {CFLAG:99}]
 
 SETCOLOR 75,150,250
 SIF FLAG:70
-	PRINTFORM [観衆 {FLAG:70}人]
+	PRINTFORM [관중 {FLAG:70}명]
 SETCOLOR 150,75,250
-IF GETBATTLESITUATION("常時撮影")
-	IF GETBATTLESITUATION("配信")
-		PRINTFORM [配信中]
+IF GETBATTLESITUATION("상시 촬영")
+	IF GETBATTLESITUATION("전송")
+		PRINTFORM [전송중]
 	ELSE
-		PRINTFORM [撮影中]
+		PRINTFORM [촬영중]
 	ENDIF
 ENDIF
 SIF FLAG:71
-	PRINTFORM [動画撮影者 {FLAG:71}人]
+	PRINTFORM [영상 촬영자 {FLAG:71}명]
 
 
 SETCOLOR 250,75,15
-;襲撃、逃げ遅れ市民
-IF GETBATTLESITUATION("撤退不可") == 1 || ((FLAG:70 + FLAG:71) > 0 && CONFIG_CHECK_EVENT_F(3) > 0)
-	PRINTFORM [撤退不能]
-;악질 시민offかつ通常戦闘の場合
+;습격, 도망치지 못한 시민
+IF GETBATTLESITUATION("철수 불가") == 1 || ((FLAG:70 + FLAG:71) > 0 && CONFIG_CHECK_EVENT_F(3) > 0)
+	PRINTFORM [철수불능]
+;악질 시민off인 동시에 통상 전투일 시
 ELSEIF TFLAG:0 < 8 && CONFIG_CHECK_EVENT_F(3) == 0 && PERCENT_CAL_F(BASE:체력, MAXBASE:체력) > 50 && PERCENT_CAL_F(BASE:기력, MAXBASE:기력) > 50 && FLAG:45 == 0
-	PRINTFORM [撤退可能まで {8 - TFLAG:0}ターン]
+	PRINTFORM [철수 가능까지 {8 - TFLAG:0}턴]
 ENDIF
 
 IF TCVARn:12 == 0
 	SETCOLOR 150,150,250
-	PRINTFORM [正常]
-	;生理周期を表示
+	PRINTFORM [정상]
+	;생리 주기 표시
 	CALL PRINT_ESTRUS_CYCLE(TARGET)
 ELSE
 	SETCOLOR 250,180,50
@@ -107,7 +107,7 @@ ELSE
 	SIF (TCVARn:12 & 끈적끈적)
 		PRINTFORM [끈적끈적]
 
-	;生理周期を表示
+	;생리 주기 표시
 	CALL PRINT_ESTRUS_CYCLE(TARGET)
 
 	SETCOLOR 150,0,250
@@ -118,7 +118,7 @@ ELSE
 		PRINTFORM [황홀]
 	SETCOLOR 150,0,250
 	SIF (TCVARn:12 & 배란)
-		PRINTFORM [強制배란]
+		PRINTFORM [강제배란]
 	SETCOLOR 200,50,50
 	SIF (TCVARn:12 & 강구속)
 		PRINTFORM [강구속]
@@ -131,7 +131,7 @@ ENDIF
 RESETCOLOR
 PRINTL 
 
-PRINT 心境　　　
+PRINT 심경　　　
 ;CALL SHINKYOU_CHECK, "PRINTSTATE", 0
 CALL SHINKYOU_CHECK, "PRINT", 0
 PRINTL 
@@ -140,7 +140,7 @@ PRINTL
 
 
 ;--------------------------------------------------
-;戦闘・敵情報
+;전투・적 정보
 
 ;촉수
 IF ENEMY_TYPE_CHECK_F("AKUOTI") == 0
@@ -157,24 +157,24 @@ IF ENEMY_TYPE_CHECK_F("AKUOTI") == 0
 ;적 캐릭터
 ELSEIF ENEMY_TYPE_CHECK_F("AKUOTI") == 1
 	IF CFLAG:(FLAG:111):0 == 상태_세뇌
-		PRINTFORM 세뇌された
-		PRINTFORM %PRINT_TRANSCALLNAME(FLAG:111)%
+		PRINTFORM 세뇌된
+		PRINTFORM  %PRINT_TRANSCALLNAME(FLAG:111)%
 		PRINT [
 		CALL TENTACLE_ACCESS_PRISON,FLAG:111, "NAME"
 		PRINT ]
 	ELSEIF CFLAG:(FLAG:111):0 == 상태_흑화
-		;흑화変身名が설정されているなら使う
+		;흑화 변신명이 설정되어 있다면 사용한다
 		IF CSTR:(FLAG:111):55 != ""
 			PRINTFORM %PRINT_TRANSNAME(FLAG:111)%
 		ELSE
-			PRINT 흑화した
-			PRINTFORM %PRINT_TRANSCALLNAME(FLAG:111)%
+			PRINT 흑화한
+			PRINTFORM  %PRINT_TRANSCALLNAME(FLAG:111)%
 		ENDIF
 	ENDIF
 	PRINTFORM  Lv.{ABL:(FLAG:111):레벨} 
 ENDIF
 
-;유폐・세뇌状況
+;유폐・세뇌 상황
 LOCAL = 0
 LOCAL:1 = 0
 LOCALS'=""
@@ -182,11 +182,11 @@ LOCALS:1'=""
 ;보스 촉수
 IF ENEMY_TYPE_CHECK_F("AKUOTI") == 0
 	FOR CCOUNT, 1, CHARANUM
-		;誰かを세뇌している敵ならその尖兵を表示
+		;누군가를 세뇌하고 있는 적이라면 그 첨병을 표시
 		IF CFLAG:CCOUNT:0 == 상태_세뇌 && CFLAG:CCOUNT:21 == FLAG:11
 			LOCAL:1 += 1
 			LOCALS:1+="["+CALLNAME:CCOUNT+"]"
-		;誰かを유폐している敵ならその犠牲者を表示
+		;누군가를 유폐하고 있는 적이라면 그 희생자를 표시
 		ELSEIF CFLAG:CCOUNT:0 == 상태_유폐 && CFLAG:CCOUNT:21 == FLAG:11
 			LOCAL += 1
 			LOCALS+="["+CALLNAME:CCOUNT+"]"
@@ -197,11 +197,11 @@ ELSE
 	FOR CCOUNT, 1, CHARANUM
 		IF CCOUNT == FLAG:111
 			;
-		;誰かを세뇌している敵ならその尖兵を表示
+		;누군가를 세뇌하고 있는 적이라면 그 첨병을 표시
 		ELSEIF CFLAG:CCOUNT:0 == 상태_세뇌 && CFLAG:CCOUNT:21 == FLAG:111
 			LOCAL:1 += 1
 			LOCALS:1+="["+CALLNAME:CCOUNT+"]"
-		;誰かを유폐している敵ならその犠牲者を表示
+		;누군가를 유폐하고 있는 적이라면 그 희생자를 표시
 		ELSEIF CFLAG:CCOUNT:0 == 상태_유폐 && CFLAG:CCOUNT:21 == FLAG:111
 			LOCAL += 1
 			LOCALS+="["+CALLNAME:CCOUNT+"]"
@@ -209,30 +209,30 @@ ELSE
 	NEXT
 ENDIF
 SIF LOCAL
-	PRINTFORM 　유폐中：%LOCALS%
+	PRINTFORM 　유폐 중：%LOCALS%
 SIF LOCAL:1
-	PRINTFORM 　세뇌中：%LOCALS:1%
+	PRINTFORM 　세뇌 중：%LOCALS:1%
 ;SIF LOCAL || LOCAL:1
 ;	PRINTL 
 PRINTL 
 
 
-;戦闘距離
+;전투 거리
 CALL SHOW_DISTANCE_WINDOW()
 
 CALL SHOW_TRAIN_PALAM_STATUS("하단부")
 
-;空白行
+;공백 행
 ;PRINTL 
 
 
-;通常の雑魚戦(制限15ターン)
-;通常の보스전 (制限50ターン)
-;襲来イベント(15ターン耐久で勝利)
+;통상 잡몹전(제한 15턴)
+;통상 보스전(제한 50턴)
+;내습 이벤트(15턴을 버티면 승리)
 IF 턴상한 > 0
-	PRINT 残り時間
+	PRINT 남은 시간
 	PRINTFORM %UNICODE(0x208D)%
-	IF GETBATTLESITUATION("追撃戦") || GETBATTLESITUATION("脱出戦")
+	IF GETBATTLESITUATION("추격전") || GETBATTLESITUATION("탈출전")
 		CALLFORM COLOR_BAR(턴상한-TFLAG:0, 턴상한, 20,210,40,70,-160,18,6,10,2,UNICODE(0x25AE),UNICODE(0x25AE))
 	ELSE
 		CALLFORM COLOR_BAR(턴상한-TFLAG:0, 턴상한, 20,70,210,40,-160,10,18,6,2,UNICODE(0x25AE),UNICODE(0x25AE))
@@ -240,9 +240,9 @@ IF 턴상한 > 0
 	PRINTFORM %UNICODE(0x208E)%
 	PRINTFORM （{턴상한-TFLAG:0, 5}/{턴상한,5}）
 	PRINTL 
-;時間無制限の場合
+;시간 무제한일 경우
 ELSE
-	PRINT 残り時間
+	PRINT 남은 시간
 	PRINTFORM %UNICODE(0x208D)%
 	CALLFORM COLOR_BAR(0, 1, 20,40,40,40,-160,0,0,0,2,UNICODE(0x25AE),UNICODE(0x25AE))
 	PRINTFORM %UNICODE(0x208E)%
@@ -254,13 +254,13 @@ ENDIF
 
 ;체력
 CALL COLORSENTENCE_ENEMYBAR,"적 체력", FLAG:13, FLAG:12, 20
-;油断
+;방심
 IF TFLAG:2 >= 1
-	PRINT 　<<油断中>> 
+	PRINT 　<<방심 중>> 
 ELSEIF FLAG:20 >= 100 || ENEMY_TYPE_CHECK_F("AKUOTI") == 1
 	PRINTFORM 　(방심도：{FLAG:17 * 100 / FLAG:16}％) 
 ELSEIF TFLAG:24 > 0
-	PRINTFORM 先制공격可能！(残り{TFLAG:24}ターン)
+	PRINTFORM 선제 공격 가능！(잔여 {TFLAG:24}턴)
 ENDIF
 PRINTL 
 	
@@ -272,7 +272,7 @@ ELSEIF FLAG:73 > 0
 	PRINTFORM 적 사정
 	CALL COLORSENTENCE_ENEMYBAR,"적 사정", FLAG:15, FLAG:14, 20
 ELSEIF ENEMY_TYPE_CHECK_F("AKUOTI") == 0
-	PRINTFORM %STR:2500%사정
+	PRINTFORM %STR:2500% 사정
 	CALL COLORSENTENCE_ENEMYBAR,"적 사정", FLAG:15, FLAG:14, 20
 ELSEIF ENEMY_TYPE_CHECK_F("AKUOTI") == 1 && (ISPENIS(FLAG:111) || TALENT:(FLAG:111):기생 > 0)
 	PRINTFORM 적 사정
@@ -282,52 +282,52 @@ ELSE
 	CALL COLORSENTENCE_ENEMYBAR,"적 절정", FLAG:15, FLAG:14, 20
 ENDIF
 PRINTL 
-;デバッグモードか解析度７５％以上か相手が세뇌/흑화 캐릭터라면 스테이터스 표시
+;;DEBUG모드이거나 해석도 ７５％이상, 또는 상대가 세뇌/흑화 캐릭터라면 스테이터스 표시
 IF FLAG:999 == 1 || FLAG:20 >= 75 || ENEMY_TYPE_CHECK_F("AKUOTI") > 0
 	IF ENEMY_TYPE_CHECK_F("AKUOTI") == 0
 		CALL TENTACLE_ACCESS, "KOUGEKI"
 		SIF RESULT < 0
 			RESULT = 0
-		PRINTFORM 攻：{RESULT,3,RIGHT} 
+		PRINTFORM 공격：{RESULT,3,RIGHT} 
 		CALL TENTACLE_ACCESS, "BOUGYO"
 		SIF RESULT < 0
 			RESULT = 0
-		PRINTFORM 防：{RESULT,3,RIGHT} 
+		PRINTFORM 방어：{RESULT,3,RIGHT} 
 		CALL TENTACLE_ACCESS, "BINSYOU"
 		SIF RESULT < 0
 			RESULT = 0
-		PRINTFORM 敏：{RESULT,3,RIGHT} 
+		PRINTFORM 민첩：{RESULT,3,RIGHT} 
 		CALL TENTACLE_ACCESS, "CHISEI"
 		SIF RESULT < 0
 			RESULT = 0
-		PRINTFORM 知：{RESULT,3,RIGHT} 
+		PRINTFORM 지성：{RESULT,3,RIGHT} 
 		PRINTL 
 		IF FLAG:20 >= 100
 			CALL TENTACLE_ACCESS, "SHORT"
-			PRINTFORM 近：{RESULT,3,RIGHT} 
+			PRINTFORM 근：{RESULT,3,RIGHT} 
 			CALL TENTACLE_ACCESS, "MIDDLE"
-			PRINTFORM 中：{RESULT,3,RIGHT} 
+			PRINTFORM 중：{RESULT,3,RIGHT} 
 			CALL TENTACLE_ACCESS, "LONG"
-			PRINTFORM 遠：{RESULT,3,RIGHT} 
+			PRINTFORM 원：{RESULT,3,RIGHT} 
 			CALL TENTACLE_ACCESS, "HOLD"
-			PRINTFORM 捕：{RESULT} 
+			PRINTFORM 구속력：{RESULT} 
 			PRINTL 
 		ELSE
-			PRINTFORML 解析度：{FLAG:20}％
+			PRINTFORML 해석도：{FLAG:20}％
 		ENDIF
 	ELSEIF ENEMY_TYPE_CHECK_F("AKUOTI") == 1
-		PRINTFORM 攻：{MAXBASE:(FLAG:111):공격,3,RIGHT} 
-		PRINTFORM 防：{MAXBASE:(FLAG:111):방어,3,RIGHT} 
-		PRINTFORM 敏：{MAXBASE:(FLAG:111):민첩,3,RIGHT} 
-		PRINTFORM 知：{MAXBASE:(FLAG:111):지성,3,RIGHT} 
+		PRINTFORM 공격：{MAXBASE:(FLAG:111):공격,3,RIGHT} 
+		PRINTFORM 방어：{MAXBASE:(FLAG:111):방어,3,RIGHT} 
+		PRINTFORM 민첩：{MAXBASE:(FLAG:111):민첩,3,RIGHT} 
+		PRINTFORM 지성：{MAXBASE:(FLAG:111):지성,3,RIGHT} 
 		PRINTL 
-		PRINTFORM 近：{ABL:(FLAG:111):근거리,3,RIGHT} 
-		PRINTFORM 中：{ABL:(FLAG:111):중거리,3,RIGHT} 
-		PRINTFORM 遠：{ABL:(FLAG:111):원거리,3,RIGHT} 
+		PRINTFORM 근：{ABL:(FLAG:111):근거리,3,RIGHT} 
+		PRINTFORM 중：{ABL:(FLAG:111):중거리,3,RIGHT} 
+		PRINTFORM 원：{ABL:(FLAG:111):원거리,3,RIGHT} 
 		PRINTL 
 	ENDIF
 ELSE
-	PRINTFORML 解析度：{FLAG:20}％
+	PRINTFORML 해석도：{FLAG:20}％
 ENDIF
 
 
@@ -339,21 +339,21 @@ DRAWLINE
 IF TCVARn:0 == 0
 	IF (TCVARn:12 & 강구속)
 		SETCOLOR 200,50,50
-		PRINT   <<강구속>>
+		PRINT   <<강구속 중>>
 	ELSE
 		SETCOLOR 255, 146, 238
-		PRINT   <<拘束中>>
+		PRINT   <<구속 중>>
 	ENDIF
 	RESETCOLOR
 	PRINTL 
 ENDIF
 
 ;--------------------------------------------------
-;パラメータ表示
+;파라미터 표시
 @SHOW_STATUS_PALAM
 #DIM CAL_VAR, 2
 
-;拡張度の表示
+;확장도 표시
 IF CFLAG:34 > 0 && CONFIG_CHECK_MANIAC_F(16) == 1
 	CALL PRINTFORM_GAPING_NOW,TARGET, CFLAG:1
 ELSE
@@ -383,7 +383,7 @@ REPEAT 12
 	ENDIF
 
 	IF COUNT >= 감각수 || BASE:(COUNT + 30) <= 0
-		;パラメータ取得레벨の表示
+		;파라미터 취득 레벨 표시
 		IF PALAM:LOCAL < 100
 			PRINT   -  [Lv.0] 
 		ELSEIF PALAM:LOCAL < 300
@@ -420,35 +420,35 @@ PRINTL
 
 
 ;------------------------------------------------------------------------------------
-;距離表示
+;거리 표시
 @PRINT_DISTANCE
 VARSET LOCALS
 PRINT [
 IF TCVARn:0 == 0
 	IF TCVARn:12 & 강구속
 		SETCOLOR 200,50,50
-		LOCALS = 강구속
+		LOCALS = 강구속 중
 	ELSE
 		SETCOLOR 255, 146, 238
-		LOCALS = 拘束中
+		LOCALS = 구속 중
 	ENDIF
 ELSE
 	IF TCVARn:0 == 1
 		SETCOLOR 255,0,0
-		LOCALS = 近
+		LOCALS = 근
 	ELSEIF TCVARn:0 == 2
 		SETCOLOR 255,255,0
-		LOCALS = 中
+		LOCALS = 중
 	ELSEIF TCVARn:0 == 3
 		SETCOLOR 64,255,64
-		LOCALS = 遠
+		LOCALS = 원
 	ENDIF
 	IF GETBIT(TCVARn:216, 1)
-		LOCALS:1 = 空中
+		LOCALS:1 = 공중
 	ELSEIF GETBIT(TCVARn:216, 2)
-		LOCALS:1 = 着地
+		LOCALS:1 = 착지
 	ELSE
-		LOCALS:1 = 距離
+		LOCALS:1 = 거리
 	ENDIF
 ENDIF
 PRINTFORM %LOCALS%
@@ -461,8 +461,8 @@ PRINTFORM %LOCALS:1%
 RESETCOLOR
 PRINT ]
 
-;전투 지원による지성補正率計算
-;ARG　支援補正の基礎値パターン
+;전투 지원에 의한 지성 보정률 계산
+;ARG　지원 보정의 기초값 패턴
 @CALC_CHISEI_SHIEN(ARG)
 #DIM CHISEI_CAL
 #DIM CCOUNT
@@ -485,17 +485,17 @@ FOR CCOUNT, 0, CHARANUM
 		;의상에 따른 보정
 		CALL CLOTH_BATTLE_HOSEI, "CHISEI", CCOUNT
 		CHISEI_CAL = CHISEI_CAL * RESULT / 100
-		;支援者が업무용 이어폰装備
+		;지원자가 업무용 이어폰 장비
 		SIF CFLAG:CCOUNT:43 == 511
 			CHISEI_CAL = CHISEI_CAL * 110 / 100 + 5
-		;支援者が헌신적
+		;지원자가 헌신적
 		SIF TALENT:CCOUNT:헌신적 > 0
 			CHISEI_CAL = CHISEI_CAL * 110 / 100 + 5
-		;支援者が사지결손
+		;지원자가 사지결손
 		SIF TALENT:CCOUNT:사지결손 > 0
-			CHISEI_CAL = CHISEI_CAL * 150 / 100 + 5;大量ボーナス(極端だがゲームバランス面の措置だと思われる)
+			CHISEI_CAL = CHISEI_CAL * 150 / 100 + 5;대량 보너스(극단적이지만 게임 밸런스 측면의 조치라고 생각된다)
 			
-		;対象者が제멋대로굼
+		;대상자가 제멋대로굼
 		SIF TALENT:TARGET:제멋대로굼 > 0
 			CHISEI_CAL = CHISEI_CAL * 25 / 100
 		LOCAL += CHISEI_CAL
@@ -516,8 +516,8 @@ ELSEIF TCVARn:0 == 2
 ELSEIF TCVARn:0 == 3
 	LOCAL = 21
 ENDIF
-;ランダムで微妙に位置が変動する…という処理だがEx攻防やエアスト切り替えた際に変動する事があるので見た目的に微妙だった
-;ターン内で固定になるように(日付＋ターン数)の剰余とかにしておく
+;랜덤으로 미묘하게 위치가 변동한다…라는 처리지만 Ex 공방이나 에어 스트라이크 전환 시에 변동하는 일이 있으므로 본 목적에 미묘했다
+;턴 내에서 고정이 되도록 (날짜＋턴 수)의 여분 등으로 해 둔다
 ;IF TCVARn:0 != 0 && RAND:2 == 0
 ;	LOCAL -= RAND:2
 ;	LOCAL += RAND:2
@@ -538,10 +538,10 @@ PRINTL ┏━━━━━━━━━━━━━━━━━━━━┓
 
 
 
-;공중전특기以外ならエアでも２行上には行かない
+;공중전특기 이외라면 에어라도 ２행상에는 가지 않는다
 IF !TALENT:TARGET:공중전특기
 	PRINT ┃　　　　　　　　　　　　　　　　　　　　┃
-	PRINTL 【危険予測】
+	PRINTL 【위험 예측】
 	PRINT ┃
 ELSE
 	PRINT ┃
@@ -571,18 +571,18 @@ IF TCVARn:0 == 0
 ENDIF
 PRINT ┃
 
-;공중전특기ならエアで表示されるのは２行上
+;공중전특기라면 에어로 표시되는 것은 ２행상
 IF TALENT:TARGET:공중전특기
-	PRINT 【危険予測】
+	PRINT 【위험 예측】
 	PRINTL
 	PRINT ┃　　　　　　　　　　　　　　　　　　　　┃
 ELSE
 	PRINT
 ENDIF
 
-;空中が狙われる確率
+;공중이 노려질 확률
 RESETCOLOR
-PRINT  空:
+PRINT  공중:
 CALL FORECAST_OUTPUT_NUM, (TCVARn:0 == 0 ? 0 # TCVARn:33)
 PRINT  %
 PRINTL
@@ -597,10 +597,10 @@ IF TCVARn:0 > 0
 	PRINT ≪
 	IF ENEMY_TYPE_CHECK_F("AKUOTI") == 0
 		CALL TENTACLE_ACCESS, "GETNAME"
-		LOCALS=%RESULTS%
+		LOCALS = %RESULTS%
 	;적 캐릭터
 	ELSEIF ENEMY_TYPE_CHECK_F("AKUOTI") == 1
-		LOCALS=%PRINT_TRANSCALLNAME(FLAG:111)%
+		LOCALS = %PRINT_TRANSCALLNAME(FLAG:111)%
 	ENDIF
 	PRINTFORM %SUBSTRING(LOCALS,0,1)%
 	PRINT ≫
@@ -613,10 +613,10 @@ ELSE
 	PRINT ≪
 	IF ENEMY_TYPE_CHECK_F("AKUOTI") == 0
 		CALL TENTACLE_ACCESS, "GETNAME"
-		LOCALS=%RESULTS%
+		LOCALS = %RESULTS%
 	;적 캐릭터
 	ELSEIF ENEMY_TYPE_CHECK_F("AKUOTI") == 1
-		LOCALS=%PRINT_TRANSCALLNAME(FLAG:111)%
+		LOCALS = %PRINT_TRANSCALLNAME(FLAG:111)%
 	ENDIF
 	PRINTFORM %SUBSTRING(LOCALS,0,1)%
 
@@ -679,7 +679,7 @@ IF TCVARn:0 == 0
 ENDIF
 
 PRINT ┃
-;地上が狙われる確率
+;지상을 노려질 확률
 PRINTPLAIN  
 CALL PRINT_FORECAST
 PRINTL
