--- a/ERB/게임_내_전투처리/촉수데이터/잡몹적/TENTACLE_MOB_501_ヒト型（擬態触手・クズ市民）.ERB
+++ b/ERB/게임_내_전투처리/촉수데이터/잡몹적/TENTACLE_MOB_501_ヒト型（擬態触手・クズ市民）.ERB
@@ -247,7 +247,7 @@ PRINTW
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM0")
 PRINTL 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
@@ -318,7 +318,7 @@ PRINTW
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM1")
 PRINTL 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｃ)
 		SETBIT TFLAG:21,1
@@ -405,7 +405,7 @@ PRINTW
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM3")
 PRINTL 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｂ)
 		SETBIT TFLAG:21,1
@@ -662,7 +662,7 @@ TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM2")
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
 ENDIF
@@ -732,7 +732,7 @@ PRINTW
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM7")
 PRINTL 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｂ)
 		SETBIT TFLAG:21,1
@@ -770,7 +770,7 @@ PRINTW
 TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM11")
 PRINTL 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;口を犯されたところを見られた
 	SETBIT TFLAG:21,2
 ENDIF
@@ -816,7 +816,7 @@ TRYCALLFORM KOJO_{CFLAG:6}_COM9
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
