--- a/ERB/게임_내_전투처리/촉수데이터/잡몹적/TENTACLE_MOB_702_蟲（アナルリーチ）.ERB
+++ b/ERB/게임_내_전투처리/촉수데이터/잡몹적/TENTACLE_MOB_702_蟲（アナルリーチ）.ERB
@@ -209,7 +209,7 @@ TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM4")
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
@@ -243,7 +243,7 @@ TRYCALLFORM KOJO_ROOT(CFLAG:6, "SEX_COM5")
 PRINTL 
 
 ;動画撮影フラグの処理
-IF FLAG:71 || GETBATTLESITUATION("常時撮影")
+IF FLAG:71 || GETBATTLESITUATION("상시 촬영")
 	;愛撫されたところを見られた
 	SIF (ARG & Ｃ) || (ARG & Ｖ) || (ARG & Ａ) || (ARG & Ｂ)
 		SETBIT TFLAG:21,1
