--- a/ERB/구상/KOJO_4_汎用豹変_OTHER.ERB
+++ b/ERB/구상/KOJO_4_汎用豹変_OTHER.ERB
@@ -37,17 +37,17 @@ TRYCALLFORM KOJO_{RESULT:0}_OTHER_%ARGS%_{RESULT:1}
 @KOJO_4_OTHER_ENTRY
 CALL KOJO_4_OTHER_ROOT("ENTRY")
 
-;세뇌/흑화 캐릭터가 操作キャラを変身強制解除させた
+;세뇌/흑화 캐릭터가 조작 캐릭터를 강제 변신 해제시켰다
 ;----------------------------------------------------------
 @KOJO_4_OTHER_BATTLE_CHARA_TRANSRELEASE
 CALL KOJO_4_OTHER_ROOT("BATTLE_CHARA_TRANSRELEASE")
 
-;세뇌/흑화 캐릭터가 操作キャラに撤退されてしまった
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막지 못했다
 ;----------------------------------------------------------
 @KOJO_4_OTHER_BATTLE_CHARA_TETTAI_SUCCESS
 CALL KOJO_4_OTHER_ROOT("BATTLE_CHARA_TETTAI_SUCCESS")
 
-;세뇌/흑화 캐릭터가 조작 캐릭터의 撤退を防いだ
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막았다
 ;----------------------------------------------------------
 @KOJO_4_OTHER_BATTLE_CHARA_TETTAI_FALSE
 CALL KOJO_4_OTHER_ROOT("BATTLE_CHARA_TETTAI_FALSE")
