--- a/ERB/구상/固有キャラ専用口上/KOJO_366_フィーアマイヤー .ERB
+++ b/ERB/구상/固有キャラ専用口上/KOJO_366_フィーアマイヤー .ERB
@@ -2501,7 +2501,7 @@ ENDIF
 
 
 ;--------------------------------------------------------------------------------------------------------------------------------------------------------
-;心境変化関連
+;심경 변화関連
 ;--------------------------------------------------------------------------------------------------------------------------------------------------------
 
 ;倒錯
