--- a/ERB/구상/固有キャラ専用口上/KOJO_366_フィーアマイヤー_OTHER.ERB
+++ b/ERB/구상/固有キャラ専用口上/KOJO_366_フィーアマイヤー_OTHER.ERB
@@ -28,15 +28,15 @@ SETCOLOR 114,113,113
 PRINTL 「要救助者ヲ発見」
 PRINTL 「無力化ノ後、回収シマス」
 
-;세뇌/흑화 캐릭터가 操作キャラを変身強制解除させた
+;세뇌/흑화 캐릭터가 조작 캐릭터를 강제 변신 해제시켰다
 ;----------------------------------------------------------
 ;@KOJO_366_OTHER_BATTLE_CHARA_TRANSRELEASE
 
-;세뇌/흑화 캐릭터가 操作キャラに撤退されてしまった
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막지 못했다
 ;----------------------------------------------------------
 ;@KOJO_366_OTHER_BATTLE_CHARA_TETTAI_SUCCESS
 
-;세뇌/흑화 캐릭터가 조작 캐릭터의 撤退を防いだ
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막았다
 ;----------------------------------------------------------
 ;@KOJO_366_OTHER_BATTLE_CHARA_TETTAI_FALSE
 
