--- a/ERB/구상/固有キャラ専用口上/KOJO_998_AA表示_OTHER.ERB
+++ b/ERB/구상/固有キャラ専用口上/KOJO_998_AA表示_OTHER.ERB
@@ -142,7 +142,7 @@ ENDIF
 ;후타나리でなかった場合終了
 
 
-;세뇌/흑화 캐릭터가 操作キャラを変身強制解除させた		
+;세뇌/흑화 캐릭터가 조작 캐릭터를 강제 변신 해제시켰다		
 ;----------------------------------------------------------
 @KOJO_998_OTHER_BATTLE_CHARA_TRANSRELEASE
 ;후타나리だった場合開始
@@ -214,7 +214,7 @@ ENDIF
 ;후타나리でなかった場合終了
 
 
-;세뇌/흑화 캐릭터가 操作キャラに撤退されてしまった
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막지 못했다
 ;----------------------------------------------------------
 @KOJO_998_OTHER_BATTLE_CHARA_TETTAI_SUCCESS
 ;후타나리だった場合開始
@@ -286,7 +286,7 @@ ENDIF
 ;후타나리でなかった場合終了
 
 
-;세뇌/흑화 캐릭터가 조작 캐릭터의 撤退を防いだ
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막았다
 ;----------------------------------------------------------
 @KOJO_998_OTHER_BATTLE_CHARA_TETTAI_FALSE
 ;후타나리だった場合開始
