--- a/ERB/구상/女性汎用口上/KOJO_0_20_ツンデレ_OTHER.ERB
+++ b/ERB/구상/女性汎用口上/KOJO_0_20_ツンデレ_OTHER.ERB
@@ -30,18 +30,18 @@
 PRINTL 「迎えに来てあげたわよ」
 PRINTL 「まだ自分をだましているのね？　촉수様の素晴らしさを教えてあげるわ……」
 
-;세뇌/흑화 캐릭터가 操作キャラを変身強制解除させた		
+;세뇌/흑화 캐릭터가 조작 캐릭터를 강제 변신 해제시켰다		
 ;----------------------------------------------------------
 @KOJO_0_OTHER_BATTLE_CHARA_TRANSRELEASE_20
 PRINTL 「あら、変身が解けちゃったわよ？」
 
-;세뇌/흑화 캐릭터가 操作キャラに撤退されてしまった		
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막지 못했다		
 ;----------------------------------------------------------
 @KOJO_0_OTHER_BATTLE_CHARA_TETTAI_SUCCESS_20
 PRINTL 「…겁쟁이なのね」
 PRINTL 「まあよいわ、時間をかけて快楽を教えてあげる」
 
-;세뇌/흑화 캐릭터가 조작 캐릭터의 撤退を防いだ		
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막았다		
 ;----------------------------------------------------------
 @KOJO_0_OTHER_BATTLE_CHARA_TETTAI_FALSE_20
 PRINTL 「逃げられないわよ、諦めなさい」
