--- a/ERB/구상/女性汎用口上/KOJO_0_22_無口.ERB
+++ b/ERB/구상/女性汎用口上/KOJO_0_22_無口.ERB
@@ -4071,7 +4071,7 @@ SETCOLOR 0xAEB4DE
 RESETCOLOR
 
 
-;心境変化関連
+;심경 변화関連
 
 ;倒錯
 ;--------------------------------------------------
@@ -4248,7 +4248,7 @@ IF TALENT:처녀 > 0
 		ENDSELECT
 		PRINTFORMDW 身体の疼きに負け、%타겟은% 自慰にふけっていった。
 	ENDIF
-;非처녀
+;비처녀
 ELSE
 	IF ABL:자위중독 >= 4
 		PRINTFORML 「んあっ！　きもち、いい……」
