--- a/ERB/구상/男性汎用口上/KOJO_1_13_元気っ子.ERB
+++ b/ERB/구상/男性汎用口上/KOJO_1_13_元気っ子.ERB
@@ -437,7 +437,7 @@ SELECTCASE RAND:3
 		ENDIF
 ENDSELECT
 
-;絶頂で変身が強制的に解けた
+;절정으로 변신이 강제로 풀렸다
 ;--------------------------------------------------
 @KOJO_1_BATTLE_CHARA_TRANSRELEASE_ECS_13
 SELECTCASE RAND:3
@@ -2325,7 +2325,7 @@ PRINTFORML 「うっ……う、うぅっ…うぅ……」
 
 
 ;--------------------------------------------------------------------------------------------------------------------------------------------------------
-;心境変化関連
+;심경 변화関連
 ;--------------------------------------------------------------------------------------------------------------------------------------------------------
 
 ;倒錯
