--- a/ERB/구상/男性汎用口上/KOJO_1_20_ツンデレ_OTHER.ERB
+++ b/ERB/구상/男性汎用口上/KOJO_1_20_ツンデレ_OTHER.ERB
@@ -30,18 +30,18 @@
 PRINTL 「迎えに来てあげたよ」
 PRINTL 「まだ自分をだましているの？　촉수様の素晴らしさを教えてあげるよ……」
 
-;세뇌/흑화 캐릭터가 操作キャラを変身強制解除させた		
+;세뇌/흑화 캐릭터가 조작 캐릭터를 강제 변신 해제시켰다		
 ;----------------------------------------------------------
 @KOJO_1_OTHER_BATTLE_CHARA_TRANSRELEASE_20
 PRINTL 「あれ、変身が解けちゃったよ？」
 
-;세뇌/흑화 캐릭터가 操作キャラに撤退されてしまった		
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막지 못했다		
 ;----------------------------------------------------------
 @KOJO_1_OTHER_BATTLE_CHARA_TETTAI_SUCCESS_20
 PRINTL 「…겁쟁이なんだね」
 PRINTL 「まあいいか、時間をかけて快楽を教えてあげるから」
 
-;세뇌/흑화 캐릭터가 조작 캐릭터의 撤退を防いだ		
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막았다		
 ;----------------------------------------------------------
 @KOJO_1_OTHER_BATTLE_CHARA_TETTAI_FALSE_20
 PRINTL 「逃げられないよ、諦めなよ」
