--- a/ERB/구상/男性汎用口上/★KOJO_1_16_真面目/OTHER.ERB
+++ b/ERB/구상/男性汎用口上/★KOJO_1_16_真面目/OTHER.ERB
@@ -158,7 +158,7 @@ ELSE
 	ENDDATA
 ENDIF
 
-;세뇌/흑화 캐릭터가 操作キャラを変身強制解除させた		
+;세뇌/흑화 캐릭터가 조작 캐릭터를 강제 변신 해제시켰다		
 ;----------------------------------------------------------
 @KOJO_1_OTHER_BATTLE_CHARA_TRANSRELEASE_16
 IF CFLAG:(FLAG:111):0==상태_흑화
@@ -175,7 +175,7 @@ ELSE
 ENDIF
 
 
-;세뇌/흑화 캐릭터가 操作キャラに撤退されてしまった		
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막지 못했다		
 ;----------------------------------------------------------
 @KOJO_1_OTHER_BATTLE_CHARA_TETTAI_SUCCESS_16
 IF CFLAG:(FLAG:111):0==상태_흑화
@@ -192,7 +192,7 @@ ELSE
 ENDIF
 
 
-;세뇌/흑화 캐릭터가 조작 캐릭터의 撤退を防いだ		
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막았다		
 ;----------------------------------------------------------
 @KOJO_1_OTHER_BATTLE_CHARA_TETTAI_FALSE_16
 IF CFLAG:(FLAG:111):0==상태_흑화
