--- a/●개발자용 자료/各種テンプレ/口上テンプレ_OTHER.ERB
+++ b/●개발자용 자료/各種テンプレ/口上テンプレ_OTHER.ERB
@@ -25,15 +25,15 @@
 ;----------------------------------------------------------
 @KOJO_0_OTHER_ENTRY_###
 
-;세뇌/흑화 캐릭터가 操作キャラを変身強制解除させた		
+;세뇌/흑화 캐릭터가 조작 캐릭터를 강제 변신 해제시켰다		
 ;----------------------------------------------------------
 @KOJO_0_OTHER_BATTLE_CHARA_TRANSRELEASE_###
 
-;세뇌/흑화 캐릭터가 操作キャラに撤退されてしまった		
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막지 못했다		
 ;----------------------------------------------------------
 @KOJO_0_OTHER_BATTLE_CHARA_TETTAI_SUCCESS_###
 
-;세뇌/흑화 캐릭터가 조작 캐릭터의 撤退を防いだ		
+;세뇌/흑화 캐릭터가 조작 캐릭터의 철수를 막았다		
 ;----------------------------------------------------------
 @KOJO_0_OTHER_BATTLE_CHARA_TETTAI_FALSE_###
 
